--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     image: mysql:8.0
     container_name: mysql-db
     environment:
-      MYSQL_ROOT_PASSWORD: E3G,1%k(CCD+WP+
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: docker
     ports:
       - "3307:3306"
@@ -22,9 +22,9 @@ services:
     depends_on:
       - mysql-db
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/mydb
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/docker?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
       SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: E3G,1%k(CCD+WP+
+      SPRING_DATASOURCE_PASSWORD: root
 
 volumes:
   mysql-data:
